k8s/dept.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparkjava-deployment
  namespace: index
spec:
  selector:
    matchLabels:
      app: sparkjava-dept
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: sparkjava-dept
    spec:
      containers:
      - name: static
        image: 861531569385.dkr.ecr.ap-northeast-1.amazonaws.com/sparkjava:number 
        ports:
        - containerPort: 8080
