k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sparkjava-svc
  namespace: sparkjava
spec:
  selector:
    app: sparkjava-dept
  ports:
  - port: 80
    targetPort: 8080
