k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: sparkjava-ingress
 namespace: index
spec:
 rules:
 - host: k8s-spark.devopscoursewithbalakonda.xyz
   http:
     paths:
     - path: 
       backend:
         serviceName: sparkjava-svc
         servicePort: 8080
